k8s/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: speed-check-service
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: speed-check
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speed-check
  labels:
    app: speed-check
    version: 1.0.0
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speed-check
  template:
    metadata:
      labels:
        app: speed-check
    spec:
      containers:
      - name: speed-check
        image: corvimae/speed-check:latest
        ports:
        - containerPort: 3000
