k8s/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: speed-check-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - speedcheck.run
      secretName: speed-check-tls
  rules:
    - host: speedcheck.run
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speed-check-service
                port: 
                  number: 3000
